@@ -14,6 +14,9 @@ Release 2.1.1-beta - UNRELEASED
 
   BUG FIXES
 
+    YARN-948. Changed ResourceManager to validate the release container list
+    before actually releasing them. (Omkar Vinit Joshi via vinodkv)
+
     YARN-1082. Create base directories on HDFS after RM login to ensure RM
     recovery doesn't fail in secure mode. (vinodkv via acmurthy)
 
